<resources>
    <string name="app_name">Spiceful</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appName">Spiceful</string>
    <string name="vegetarian_recipes">Vegetarian Recipes</string>
    <string name="non_vegetarian_recipes">Non-Vegetarian Recipes</string>
    <string name="request_a_recipe">Request a recipe</string>
    <string name="contact_us">Contact Us</string>
    <string name="share_this_app">Share this app</string>
    <string name="email">E-mail</string>
    <string name="maps">Maps</string>
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="facebook">Facebook</string>
    <string name="blank">blank</string>
    <string name="textview">Ingredients: \n\n\nMethod:</string>
    <string name="recipe_name_viewPager">Recipe Name</string>
    <string name="requestDishName">Name</string>
    <string name="nameHint">Enter the name of dish here</string>
    <string name="requestDishEmail">Email</string>
    <string name="requestDishEmailHint">Please enter your email here</string>
    <string name="requestDishUsername">Please enter your name here</string>
    <string name="recipeRequested">Recipe(s) Requested</string>
    <string name="change_font_size">Change Font Size</string>
    <string name="change_image_size">Change Image Size</string>
    <string name="theendlessmeal"><a href="https://www.instagram.com/theendlessmeal/">The Endless Meal</a></string>
    <string name="adjust_brightness">Adjust Brightness</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>