<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    tools:context=".contactUs">


    <Button
        android:id="@+id/facebook"
        android:layout_width="139dp"
        android:layout_height="60dp"
        android:background="#DD4141"
        android:drawableTop="@drawable/facebook"
        android:paddingTop="10dp"
        android:text="@string/facebook"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <Button
        android:id="@+id/email"
        android:layout_width="139dp"
        android:layout_height="60dp"
        android:background="#DD4141"
        android:drawableTop="@drawable/ic_baseline_alternate_email_24"
        android:paddingTop="10dp"
        android:text="@string/email"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <Button
        android:id="@+id/maps"
        android:layout_width="139dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:background="#DD4141"
        android:drawableTop="@drawable/ic_baseline_map_24"
        android:paddingTop="10dp"
        android:text="@string/maps"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.324" />

    <Button
        android:id="@+id/phone"
        android:layout_width="139dp"
        android:layout_height="60dp"
        android:background="#DD4141"
        android:paddingTop="10dp"
        android:text="@string/phone"
        android:textColor="#FFFFFF"
        android:drawableTop="@drawable/ic_baseline_local_phone_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.324" />

    <Button
        android:id="@+id/website"
        android:layout_width="139dp"
        android:layout_height="60dp"
        android:background="#DD4141"
        android:paddingTop="10dp"
        android:text="@string/website"
        android:textColor="#FFFFFF"
        android:drawableTop="@drawable/ic_baseline_public_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.527" />
</androidx.constraintlayout.widget.ConstraintLayout>