<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:orientation="vertical"
    android:paddingTop="20dp"
    tools:context=".request">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/requestDishUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:shadowColor="#F8F5F5"
            android:text="@string/requestDishName"
            android:textColor="#F3F3F3"
            android:textSize="@dimen/fab_margin" />

        <EditText
            android:id="@+id/requestDishUserNameInput"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:backgroundTint="#F1E9E9"
            android:ems="10"
            android:hint="@string/requestDishUsername"
            android:inputType="textPersonName"
            android:textSize="14dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:shadowColor="#F8F6F6"
            android:textColor="#F1EDED"
            android:textColorHighlight="#F4EFEF"
            android:textColorHint="#F6F1F1"
            android:textColorLink="#F3ECEC" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/requestDishNameEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:shadowColor="#F8F5F5"
            android:text="@string/requestDishEmail"
            android:textColor="#F3F3F3"
            android:textSize="@dimen/fab_margin" />

        <EditText
            android:id="@+id/requestDishEmailInput"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/requestDishEmailHint"
            android:textSize="14dp"
            android:inputType="textPersonName"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:shadowColor="#F8F6F6"
            android:textColor="#F1EDED"
            android:textColorHighlight="#F4EFEF"
            android:textColorHint="#F6F1F1"
            android:textColorLink="#F3ECEC" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/requestDishName"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:shadowColor="#F8F5F5"
            android:text="@string/recipeRequested"
            android:textColor="#F3F3F3"
            android:textSize="@dimen/fab_margin" />

        <EditText
            android:id="@+id/requestDishNameInput"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/nameHint"
            android:inputType="textPersonName"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:shadowColor="#F8F6F6"
            android:textColor="#F1EDED"
            android:textColorHighlight="#F4EFEF"
            android:textColorHint="#F6F1F1"
            android:textColorLink="#F3ECEC"
            android:textSize="14dp" />

    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="137dp"
        android:layout_height="62dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorAccent"
        android:text="Submit"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/submit" />
</LinearLayout>